fix: set popper default placement to 'auto' which does a much better job with big markdown contents. fix: don't hide popups when user clicks on a scrollbar in the infoview. fix: max sizing of infoview popups so they are not alwasy 100% of the view.

--- a/lean4-infoview/src/infoview/index.css
+++ b/lean4-infoview/src/infoview/index.css
@@ -90,6 +90,14 @@ select {
     border-color: var(--vscode-dropdown-border);
     border-width: 1px;
     border-style: solid;
+	max-width: calc(70%);
+	box-sizing: border-box;
+}
+
+@media (max-width: 500px) {
+	.tooltip {
+		max-width: 100vw;
+	}
 }
 
 .tooltip-arrow,
